--- a/data/css/main.css
+++ b/data/css/main.css
@@ -196,7 +196,7 @@ Start of base Webflow CSS - If you're looking for some ultra-clean CSS, skip the
 }
 
 [class^="w-icon-"], [class*=" w-icon-"] {
-    font-family: 'webflow-icons' !important;
+    font-family: 'webflow-icons', Exo, sans-serif !important;
     speak: none;
     font-style: normal;
     font-weight: normal;
@@ -311,6 +311,7 @@ html[data-w-dynpage] [data-w-cloak] {
     color: transparent !important
 }
 
+/*noinspection CssOverwrittenProperties,CssReplaceWithShorthandSafely*/
 .w-webflow-badge, .w-webflow-badge * {
     position: static;
     left: auto;
@@ -462,8 +463,7 @@ blockquote {
 }
 
 figure {
-    margin: 0;
-    margin-bottom: 10px
+    margin: 0 0 10px;
 }
 
 figcaption {
@@ -625,11 +625,10 @@ textarea.w-input, textarea.w-select {
 }
 
 .w-radio-input {
-    margin: 4px 0 0;
     margin-top: 1px \9;
     line-height: normal;
     float: left;
-    margin-left: -20px
+    margin: 4px 0 0 -20px;
 }
 
 .w-radio-input {
@@ -1250,6 +1249,7 @@ textarea.w-input, textarea.w-select {
     z-index: -100
 }
 
+/*noinspection CssInvalidPseudoSelector*/
 .w-background-video > video::-webkit-media-controls-start-playback-button {
     display: none !important;
     -webkit-appearance: none
@@ -1452,8 +1452,7 @@ textarea.w-input, textarea.w-select {
     top: 0;
     right: 0;
     bottom: 0;
-    margin: auto;
-    margin-right: 20px;
+    margin: auto 20px auto auto;
     width: 1em;
     height: 1em
 }
@@ -1489,6 +1488,7 @@ textarea.w-input, textarea.w-select {
     }
 }
 
+/*noinspection CssOverwrittenProperties*/
 .w-lightbox-backdrop {
     color: #000;
     cursor: auto;
@@ -2233,6 +2233,7 @@ a {
     text-decoration: underline;
 }
 
+/*noinspection DuplicatedCode*/
 .Section {
     display: inline-block;
     width: 100%;
@@ -2290,8 +2291,7 @@ a {
 }
 
 .Section.StartPage.BubbleBlaster {
-    /*background-color: #cf0063;*/
-    /*background-image: linear-gradient(0deg, #0080FF, #66CBFF);*/
+
 }
 
 .Section.column {
@@ -2307,6 +2307,7 @@ a {
     justify-content: space-between;
 }
 
+/*noinspection DuplicatedCode*/
 .Section.column.devices {
     height: auto;
     -webkit-box-orient: vertical;
@@ -2320,6 +2321,7 @@ a {
     align-items: center;
 }
 
+/*noinspection DuplicatedCode*/
 .Section.column.Faq {
     height: auto;
     -webkit-box-orient: vertical;
@@ -2374,6 +2376,7 @@ a {
     background-color: transparent;
 }
 
+/*noinspection DuplicatedCode*/
 .Section.Wide {
     display: none;
     height: auto;
@@ -2609,7 +2612,7 @@ a {
     border-bottom: 1px solid #555;
 }
 
-.ProjectItem.Last .ProjectContent {
+.ProjectItem:last-child .ProjectContent {
     border-bottom: 0;
     padding-bottom: 10px;
 }
@@ -2806,6 +2809,7 @@ a {
     text-align: center;
 }
 
+/*noinspection DuplicatedCode*/
 .Wrapper {
     display: -webkit-box;
     display: -webkit-flex;
@@ -3011,6 +3015,7 @@ a {
     display: inline-block;
 }
 
+/*noinspection DuplicatedCode*/
 .text-block-3 {
     display: inline-block;
     -webkit-box-orient: horizontal;
@@ -3034,9 +3039,9 @@ a {
 .icon-2 {
     position: static;
     display: inline-block;
-    margin-right: 0px;
+    margin-right: 0;
     margin-left: 5px;
-    padding-left: 0px;
+    padding-left: 0;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -webkit-flex-direction: row;
@@ -3254,7 +3259,7 @@ a {
     border: 1px none #000;
 }
 
-.ProjectItem.Last {
+.ProjectItem:last-child {
     margin-bottom: 0;
 }
 
@@ -4451,6 +4456,98 @@ img {
     -webkit-user-drag: none;
 }
 
+/*.kit-scrollbar*/ {
+    overflow: auto;
+    scrollbar-width: thin;
+    scrollbar-color: #4d4d4d #2b2b2b;
+}
+/*.kit-scrollbar*/::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    z-index: 999999;
+}
+/*.kit-scrollbar*/::-webkit-scrollbar:horizontal {
+    display: none;
+}
+/*.kit-scrollbar*/::-webkit-scrollbar-track {
+    background-color: #2b2b2b;
+    background-clip: padding-box;
+    /*border-style: solid;*/
+    /*border-color: #212121;*/
+    /*border-width: 0 0 0 1px;*/
+    /*border-width: 0;*/
+    /*padding: 0 0 0 2px;*/
+}
+/*.kit-scrollbar*/::-webkit-scrollbar-track:horizontal {
+    border-width: 0 0 0 0;
+}
+/*.kit-scrollbar*/::-webkit-scrollbar-thumb {
+    background-color: #4d4d4d;
+    border-style: solid;
+    border-color: transparent;
+    border-width: 4px;
+    background-clip: content-box;
+    border-radius: 0;
+}
+/*.kit-scrollbar*/::-webkit-scrollbar-thumb:hover {
+    background-color: #5e5e5e;
+    border-width: 2px;
+    border-radius: 50ch;
+}
+/*.kit-scrollbar*/::-webkit-scrollbar-thumb:hover:disabled {
+    background-color: #404040;
+}
+/*.kit-scrollbar.with-horizontal*/::-webkit-scrollbar:horizontal {
+    display: block;
+}
+/*.kit-scrollbar.with-horizontal*/::-webkit-scrollbar-track:horizontal {
+    border-width: 1px 0 0 0;
+}
+/*.kit-scrollbar.with-horizontal*/::-webkit-scrollbar-thumb:horizontal {
+    border-width: 1px 0 0 0;
+}
+/*.kit-scrollbar.with-arrows*/::-webkit-scrollbar-button {
+    display: block;
+    height: 11px;
+    position: relative;
+    /*background-color: #4d4d4d;*/
+    background-color: #2d2d2d !important;
+    background-image: url(https://d3e54v103j8qbb.cloudfront.net/gen/img/sprites/scrollbars.f8bcb5d750.png);
+    background-repeat: no-repeat;
+    /*border-top-color: #212121;*/
+    /*border-top-style: solid;*/
+}
+/*.kit-scrollbar.with-arrows*/::-webkit-scrollbar-button:hover {
+    background-color: #5e5e5e;
+}
+/*.kit-scrollbar.with-arrows*/::-webkit-scrollbar-button:disabled {
+    background-color: #404040;
+}
+/*.kit-scrollbar.with-arrows*/::-webkit-scrollbar-button:vertical {
+    background-position-x: -10px;
+    /*border-left-color: #212121;*/
+    /*border-left-style: solid;*/
+    /*border-top: none;*/
+}
+/*.kit-scrollbar.with-arrows*/::-webkit-scrollbar-button:vertical:hover {
+    background-position-x: -20px;
+}
+/*.kit-scrollbar.with-arrows*/::-webkit-scrollbar-button:vertical:disabled {
+    background-position-x: 0;
+}
+/*.kit-scrollbar.with-arrows*/::-webkit-scrollbar-button:vertical:decrement {
+    border-width: 0 0 1px 1px;
+    background-position-y: 0;
+}
+/*.kit-scrollbar.with-arrows*/::-webkit-scrollbar-button:vertical:increment {
+    border-width: 1px 0 0 1px;
+    background-position-y: -10px;
+}
+/*.kit-scrollbar.with-arrows*/::-webkit-scrollbar-button:start:increment,
+/*.kit-scrollbar.with-arrows*/::-webkit-scrollbar-button:end:decrement {
+    display: none;
+}
+
 body {
-    --version-data-css-main: "2021.8.22.19.03"
+    --version-data-css-main: "2021.8.22.22.30"
 }
