--- a/data/css/main.css
+++ b/data/css/main.css
@@ -3064,6 +3064,25 @@ a {
     align-items: center;
 }
 
+.DownloadCount {
+    display: inline;
+    background: #333;
+    color: white;
+    padding: 2px 4px;
+    border-radius: 7px;
+}
+
+.DownloadCountText {
+    text-shadow: 0 0 5px rgb(0 0 0 / 50%) !important;
+    box-shadow: 0 0 10px rgb(0 0 0 / 30%) !important;
+    background-image: linear-gradient(var(--gradient-rotation), var(--gradient-secondary), var(--gradient-primary));
+    color: white !important;
+    padding: 2px 4px;
+    border-radius: 7px;
+    padding: 4px 8px;
+    display: inline-block;
+}
+
 .navlink {
     height: 54px;
     min-height: 48px;
@@ -4552,5 +4571,5 @@ body p:last-child {
 }
 
 body {
-    --version-data-css-main: "2021.8.22.23.52"
+    --version-data-css-main: "2022.5.4.18.12"
 }
