--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 :root {
-    --accent-color: #FF1F00;
+    --accent-color: #f90;
     --accent-color-alt: #FF6600;
     --gradient-rotation: 330deg;
-    --gradient-primary: #FF1F00;
+    --gradient-primary: #FF3F00;
     --gradient-secondary: #FF6600;
 }
 
