--- a/data/css/main.css
+++ b/data/css/main.css
@@ -296,7 +296,7 @@ html.w-mod-touch * {
     line-height: inherit;
     text-decoration: none;
     cursor: pointer;
-    border-radius: 0;
+    border-radius: 50ch;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -2874,7 +2874,7 @@ a {
     -webkit-flex: 0 0 auto;
     -ms-flex: 0 0 auto;
     flex: 0 0 auto;
-    border-radius: calc(100%/16);
+    border-radius: calc(25%);
     -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
@@ -3670,7 +3670,7 @@ a {
     border-style: solid;
     border-width: 1px;
     border-color: #555;
-    border-radius: 7px;
+    border-radius: 13.5px;
     background-color: #444;
     -webkit-transition: border-color 200ms ease, color 300ms ease, background-color 300ms ease;
     transition: border-color 200ms ease, color 300ms ease, background-color 300ms ease;
@@ -3810,9 +3810,9 @@ a {
     color: var(--accent-color);
 }
 
-.GradientButton {
+.StartButton {
     display: inline-block;
-    margin-right: 0;
+    margin-right: 16px;
     padding: 12px 24px;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -3827,64 +3827,61 @@ a {
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
-    border-radius: 0;
-    background-color: var(--accent-color);
+    background-color: #fff;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
     -webkit-transition: background-color 500ms ease, color 500ms ease;
     transition: background-color 500ms ease, color 500ms ease;
     font-family: Exo, sans-serif;
-    color: #fff;
+    color: #222;
     font-size: 16px;
     line-height: 26px;
     font-weight: 600;
     text-align: center;
     text-transform: none;
     cursor: default;
-    border-radius: 7px;
-}
 
-.GradientButton:hover {
+.StartButton:hover {
     background-color: #555;
     color: var(--accent-color);
 }
 
-.GradientButton:active {
+.StartButton:active {
     background-color: #666;
     color: var(--accent-color);
 }
 
-.GradientButton.outline {
+.StartButton.outline {
     margin-left: 10px;
     border: 1px solid #6e6e6e;
     background-color: transparent;
     color: #5a5a5a;
 }
 
-.GradientButton.contact {
+.StartButton.contact {
     margin-left: 10px;
     background-color: transparent;
     box-shadow: inset 0 0 0 2px hsla(0, 0%, 100%, 0.2);
 }
 
-.GradientButton.contact:hover {
+.StartButton.contact:hover {
     box-shadow: inset 0 0 0 2px #fff;
     color: #fff;
 }
 
-.GradientButton.top {
+.StartButton.top {
     margin-left: 30px;
     padding: 20px 35px;
     font-size: 16px;
 }
 
-.GradientButton.form-button {
+.StartButton.form-button {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     -webkit-transition-timing-function: cubic-bezier(.215, .61, .355, 1), cubic-bezier(.215, .61, .355, 1);
     transition-timing-function: cubic-bezier(.215, .61, .355, 1), cubic-bezier(.215, .61, .355, 1);
 }
 
-.GradientButton.form-button:hover {
+.StartButton.form-button:hover {
     background-color: #000;
     color: #fff;
 }
@@ -3892,7 +3889,7 @@ a {
 .BrandIcon {
     position: relative;
     top: 0;
-    border-radius: calc(100%/16);
+    border-radius: calc(100%/25);
     display: inline;
     margin-right: 16px;
 }
@@ -4220,7 +4217,7 @@ a {
 /*        width: auto;*/
 /*    }*/
 
-/*    .GradientButton.form-button {*/
+/*    .StartButton.form-button {*/
 /*        border-top-right-radius: 0;*/
 /*        border-bottom-left-radius: 3px;*/
 /*    }*/
@@ -4426,15 +4423,15 @@ a {
         text-align: center;
     }
 
-    .GradientButton {
+    .StartButton {
         display: block;
     }
 
-    .GradientButton:hover {
+    .StartButton:hover {
         color: #eee;
     }
 
-    .GradientButton.contact {
+    .StartButton.contact {
         width: 100%;
         margin-top: 10px;
         margin-left: 0;
