--- a/src/Head.css
+++ b/src/Head.css
@@ -146,6 +146,51 @@
   background: #0004;
 }
 
+.Description {
+  min-height: calc(100vh - 70px - 32px);
+  padding-top: 70px;
+}
+
+.Description h3, .Description h4, .Description h5, .Description h6, .Description div {
+  line-height: 1.5em;
+  margin-top: 1.2em;
+  margin-bottom: 0.3em;
+  padding: 0;
+}
+
+.Description p, .Description ul {
+  line-height: 1.5em;
+  margin-top: 0.4em;
+  margin-bottom: 0.1em;
+  padding: 0;
+}
+
+.Description ul li {
+  line-height: 1.5em;
+  margin-top: 0.1em;
+  margin-bottom: 0.025em;
+  padding: 0;
+}
+
+.Description ul {
+  margin-left: 0;
+  margin-right: 0;
+  padding: 0;
+  list-style-position: inside;
+}
+
+.Description h2 {
+  line-height: 1.5em;
+  margin-top: 0.4em;
+  margin-bottom: 0.1em;
+}
+
+.Description h1 {
+  line-height: 1.5em;
+  margin-top: 0.8em;
+  margin-bottom: 0.2em;
+}
+
 ::-webkit-scrollbar {
   width: 18px;
   height: 18px;
