--- a/src/Nav.css
+++ b/src/Nav.css
@@ -210,3 +210,37 @@
     width: 100vw;
   }
 }
+
+.Footer {
+  display: flex;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: #111;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 0em;
+  text-transform: uppercase;
+  text-align: start;
+  padding: 3rem;
+  z-index: -10;
+
+  box-shadow: 0 0 32px 0 #000a;
+}
+
+.Footer .FooterLink {
+  color: #fff !important;
+  text-decoration: solid underline 2px;
+  border-radius: 8px;
+  font-weight: 700;
+
+  color: #fff7 !important;
+}
