--- a/src/Head.css
+++ b/src/Head.css
@@ -1,383 +1,504 @@
 .Head {
-  position: relative;
-  z-index: 20;
-  background-color: #111 !important;
+    position: relative;
+    z-index: 20;
+    background-color: #111 !important;
 }
 
-#Start {
-  height: calc(100vh);
-  padding-left: 100px;
+body {
+    overflow-x: hidden;
+}
 
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  color: #fffa;
-  z-index: 10;
-  box-shadow: 0 0 32px 0 #0007;
+.circles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: clip;
+    margin: 0;
+}
+
+.circles li {
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background: rgba(255, 255, 255, 0.2);
+    animation: animate 25s linear infinite;
+    bottom: -150px;
+    z-index: 10;
+}
+
+.circles li:nth-child(1) {
+    left: 25%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
+}
+
+
+.circles li:nth-child(2) {
+    left: 10%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 2s;
+    animation-duration: 12s;
+}
+
+.circles li:nth-child(3) {
+    left: 70%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 4s;
+}
+
+.circles li:nth-child(4) {
+    left: 40%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 0s;
+    animation-duration: 18s;
+}
+
+.circles li:nth-child(5) {
+    left: 65%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 0s;
+}
+
+.circles li:nth-child(6) {
+    left: 75%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 3s;
+}
+
+.circles li:nth-child(7) {
+    left: 35%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 7s;
+}
+
+.circles li:nth-child(8) {
+    left: 50%;
+    width: 25px;
+    height: 25px;
+    animation-delay: 15s;
+    animation-duration: 45s;
+}
+
+.circles li:nth-child(9) {
+    left: 20%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 2s;
+    animation-duration: 35s;
+}
+
+.circles li:nth-child(10) {
+    left: 85%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 0s;
+    animation-duration: 11s;
+}
+
+
+@keyframes animate {
+    0% {
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+        border-radius: 0;
+    }
+
+    90% {
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateY(-1000px) rotate(720deg);
+        opacity: 0;
+        border-radius: 50%;
+    }
+
+}
+#Start {
+    height: calc(100vh);
+    padding-left: 100px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    color: #fffa;
+    z-index: 10;
+    box-shadow: 0 0 32px 0 #0007;
 }
 
 #Start .ProjectTitle {
-  color: #fff;
-  font-size: 5em;
-  margin-bottom: 0.2em;
-  text-shadow: 0 0 48px #000e;
+    color: #fff;
+    font-size: 5em;
+    margin-bottom: 0.2em;
+    text-shadow: 0 0 48px #000e;
 }
 
 #Start .StartSubHead {
-  font-size: 1.5rem;
-  margin-top: 0;
-  margin-bottom: 4em;
-  text-shadow: 0 0 32px #000e;
+    font-size: 1.5rem;
+    margin-top: 0;
+    margin-bottom: 4em;
+    text-shadow: 0 0 32px #000e;
 }
 
 .StartButton {
-  color: #000;
-  display: inline-block;
-  background: #fff8;
-  backdrop-filter: blur(24px);
-  padding: 16px 24px;
-  text-decoration: none;
-  z-index: 1;
-  box-sizing: content-box;
-  user-select: none;
+    color: #000;
+    display: inline-block;
+    background: #fff8;
+    backdrop-filter: blur(8px);
+    padding: 16px 24px;
+    text-decoration: none;
+    z-index: 1;
+    box-sizing: content-box;
+    user-select: none;
 }
 
 .StartButton:first-child {
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
 }
 
 .StartButton:last-child {
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
 }
 
 .ButtonGroup {
-  margin: 0;
-  padding: 0;
-  border-radius: 8px;
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
-  width: max-content
+    margin: 0;
+    padding: 0;
+    border-radius: 8px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+    width: max-content
 }
 
 .StartDLButton {
-  color: #fff;
-  display: inline-block;
-  background: #0008;
-  backdrop-filter: blur(24px);
-  padding: 16px 24px;
-  text-decoration: none;
-  z-index: 1;
-  box-sizing: content-box;
-  user-select: none;
+    color: #fff;
+    display: inline-block;
+    background: #0008;
+    backdrop-filter: blur(8px);
+    padding: 16px 24px;
+    text-decoration: none;
+    z-index: 1;
+    box-sizing: content-box;
+    user-select: none;
 }
 
 .StartDLButton:first-child {
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
 }
 
 .StartDLButton:last-child {
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
 }
 
 .StartDLButton:hover {
-  background: #4448;
-  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
-  z-index: 2 !important;
+    background: #4448;
+    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
+    z-index: 2 !important;
 }
 
 @media screen and (max-width: 570px) {
-  #Start {
-    padding-left: 32px;
-    font-size: 0.5rem;
-  }
+    #Start {
+        padding-left: 32px;
+        font-size: 0.5rem;
+    }
 
-  #Start .StartSubHead {
-    margin-bottom: 2em;
-    font-size: 1rem;
-  }
+    #Start .StartSubHead {
+        margin-bottom: 2em;
+        font-size: 1rem;
+    }
 
-  .StartButton {
-    display: block;
-    width: calc(100vw - 128px);
-    margin-bottom: 12px;
-    font-size: 1.5em;
-  }
+    .StartButton {
+        display: block;
+        width: calc(100vw - 128px);
+        margin-bottom: 12px;
+        font-size: 1.5em;
+    }
 }
 
 @media screen and (max-width: 720px) {
-  #Start .ProjectTitle {
-    font-size: 5em;
-  }
+    #Start .ProjectTitle {
+        font-size: 5em;
+    }
 
-  #Start .StartSubHead {
-    font-size: 2em;
-  }
+    #Start .StartSubHead {
+        font-size: 2em;
+    }
 }
 
 .StartButton:hover {
-  background: #fff;
-  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
-  z-index: 2 !important;
+    background: #fff;
+    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
+    z-index: 2 !important;
 }
 
 .ProjectIcon {
-  display: block;
-  width: 128px !important;
-  height: 128px !important;
-  border-radius: 20%;
-  background-size: contain !important;
+    display: block;
+    width: 128px !important;
+    height: 128px !important;
+    border-radius: 20%;
+    background-size: contain !important;
 }
 
 #ProjectDescription {
-  padding-top: 64px;
-  width: 100%;
-  height: fit-content;
-  color: white;
-  background-color: #222;
-  overflow: hidden;
-  margin: 0;
+    padding-top: 64px;
+    width: 100%;
+    height: fit-content;
+    color: white;
+    background-color: #222;
+    overflow: hidden;
+    margin: 0;
 }
 
 #ProjectDescription a {
-  text-underline-offset: 4px;
-  color: #fff7;
+    text-underline-offset: 4px;
+    color: #fff7;
 }
 
 #ProjectDescription a:hover {
-  text-underline-offset: 4px;
-  color: #fff;
+    text-underline-offset: 4px;
+    color: #fff;
 }
 
 #ProjectDescription pre,
 #ProjectDescription code {
-  padding: 4px 8px;
-  margin: 0.2em;
-  background-color: #444;
-  border-radius: 8px;
+    padding: 4px 8px;
+    margin: 0.2em;
+    background-color: #444;
+    border-radius: 8px;
 }
 
 #ProjectDescription pre {
-  padding: 4px 8px;
-  background-color: #444;
-  max-width: 70%;
+    padding: 4px 8px;
+    background-color: #444;
+    max-width: 70%;
 }
 
 #ProjectDescription img {
-  border-radius: 12px;
-  margin: 2px;
-  box-shadow: 0 32px 32px -32px #0008;
-  outline: solid 4px #fff0;
+    border-radius: 12px;
+    margin: 2px;
+    box-shadow: 0 32px 32px -32px #0008;
+    outline: solid 4px #fff0;
 }
 
 #ProjectDescription .carousel img {
-  border-radius: 0;
-  margin: 0;
+    border-radius: 0;
+    margin: 0;
 }
 
 #ProjectDescription img:hover {
-  outline: solid 4px #fff4;
+    outline: solid 4px #fff4;
 }
 
 #ProjectDescription hr {
-  width: 80%;
-  border-color: #fff4;
-  border-width: 1.5px;
-  margin-top: 1em;
-  margin-bottom: 0.5em;
-  background-color: transparent;
-  display: block;
-  unicode-bidi: isolate;
-  overflow: hidden;
-  border-style: solid;
-  box-shadow: 0 8px 12px 1px #0004;
+    width: 80%;
+    border-color: #fff4;
+    border-width: 1.5px;
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+    background-color: transparent;
+    display: block;
+    unicode-bidi: isolate;
+    overflow: hidden;
+    border-style: solid;
+    box-shadow: 0 8px 12px 1px #0004;
 }
 
 .ProjectIcon {
-  box-shadow: 0 24px 24px -24px #0007, 0 0 16px #0004;
+    box-shadow: 0 24px 24px -24px #0007, 0 0 16px #0004;
 }
 
 .Badge {
-  color: white;
-  background: #0008;
-  padding: 4px 8px;
-  border-radius: 8px;
-  margin-top: 32px;
-  margin-right: 8px;
-  position: relative;
-  top: 4px;
-  font-size: medium;
+    color: white;
+    background: #0008;
+    padding: 4px 8px;
+    border-radius: 8px;
+    margin-top: 32px;
+    margin-right: 8px;
+    position: relative;
+    top: 4px;
+    font-size: medium;
 }
 
 .Badge.Deprecated {
-  background: crimson;
+    background: crimson;
 }
 
 .Badge.Version {
-  background: #fffa;
-  color: #000a;
-  top: 0;
-  margin-right: -2px;
+    background: #fffa;
+    color: #000a;
+    top: 0;
+    margin-right: -2px;
 }
 
 .Badge.New {
-  background: limegreen;
+    background: limegreen;
 }
 
 .Badge.ComingSoon {
-  background: #0004;
+    background: #0004;
 }
 
 .Badge.Alpha {
-  background: #f30;
-  color: #fff;
+    background: #f30;
+    color: #fff;
 }
 
 .Badge.Beta {
-  background: #f90;
+    background: #f90;
 }
 
 .Description {
-  min-height: calc(100vh - 70px - 32px);
-  padding-top: 70px;
+    min-height: calc(100vh - 70px - 32px);
+    padding-top: 70px;
 }
 
 .Description h3, .Description h4, .Description h5, .Description h6, .Description div {
-  line-height: 1.5em;
-  margin-top: 1.2em;
-  margin-bottom: 0.3em;
-  padding: 0;
+    line-height: 1.5em;
+    margin-top: 1.2em;
+    margin-bottom: 0.3em;
+    padding: 0;
 }
 
 .Description p, .Description ul {
-  line-height: 1.5em;
-  margin-top: 0.4em;
-  margin-bottom: 0.1em;
-  padding: 0;
+    line-height: 1.5em;
+    margin-top: 0.4em;
+    margin-bottom: 0.1em;
+    padding: 0;
 }
 
 .Description ul li {
-  line-height: 1.5em;
-  margin-top: 0.1em;
-  margin-bottom: 0.025em;
-  padding: 0;
+    line-height: 1.5em;
+    margin-top: 0.1em;
+    margin-bottom: 0.025em;
+    padding: 0;
 }
 
 .Description ul {
-  margin-left: 0;
-  margin-right: 0;
-  padding: 0;
-  list-style-position: inside;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0;
+    list-style-position: inside;
 }
 
 .Description h2 {
-  line-height: 1.5em;
-  margin-top: 0.4em;
-  margin-bottom: 0.1em;
+    line-height: 1.5em;
+    margin-top: 0.4em;
+    margin-bottom: 0.1em;
 }
 
 .Description h1 {
-  line-height: 1.5em;
-  margin-top: 0.8em;
-  margin-bottom: 0.2em;
+    line-height: 1.5em;
+    margin-top: 0.8em;
+    margin-bottom: 0.2em;
 }
 
 ::-webkit-scrollbar {
-  width: 18px;
-  height: 18px;
-  background: hsl(216, 21%, 20%);
+    width: 18px;
+    height: 18px;
+    background: hsl(216, 21%, 20%);
 }
 ::-webkit-scrollbar-button {
-  display: block;
-  position: relative;
-  resize: none;
-  image-resolution: 16px;
-  background-repeat: no-repeat;
-  background: #111;
-  background-image: url(data/img/scrollbars.png);
+    display: block;
+    position: relative;
+    resize: none;
+    image-resolution: 16px;
+    background-repeat: no-repeat;
+    background: #111;
+    background-image: url(data/img/scrollbars.png);
 }
 ::-webkit-scrollbar-track {
-  background: #111;
+    background: #111;
 }
 ::-webkit-scrollbar-thumb {
-  background: #333;
-  border-style: solid;
-  border-color: transparent;
-  border-width: 8px;
-  background-clip: content-box;
-  border-radius: 0;
+    background: #333;
+    border-style: solid;
+    border-color: transparent;
+    border-width: 8px;
+    background-clip: content-box;
+    border-radius: 0;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #444;
-  border-width: 7px !important;
-  border-radius: 50vw;
-  width: 3px
+    background-color: #444;
+    border-width: 7px !important;
+    border-radius: 50vw;
+    width: 3px
 }
 ::-webkit-scrollbar-thumb:hover:vertical {
-max-width: 3px
+    max-width: 3px
 }
 ::-webkit-scrollbar-thumb:hover:horizontal {
-max-height: 3px
+    max-height: 3px
 }
 ::-webkit-scrollbar-button:vertical {
-  background-position-x: -20px;
+    background-position-x: -20px;
 }
 ::-webkit-scrollbar-button:vertical:hover {
-  background-position-x: -40px;
-  filter: brightness(5)
+    background-position-x: -40px;
+    filter: brightness(5)
 }
 ::-webkit-scrollbar-button:vertical:disabled {
-  background-position-x: 0;
+    background-position-x: 0;
 }
 ::-webkit-scrollbar-button:vertical:decrement {
-  border-width: 0 0 1px 1px;
-  background-position-y: 0;
+    border-width: 0 0 1px 1px;
+    background-position-y: 0;
 }
 ::-webkit-scrollbar-button:vertical:increment {
-  border-width: 1px 0 0 1px;
-  background-position-y: -20px;
+    border-width: 1px 0 0 1px;
+    background-position-y: -20px;
 }
 ::-webkit-scrollbar-button:start:increment,
 ::-webkit-scrollbar-button:end:decrement {
-  display: none;
+    display: none;
 }
 
 @media screen and (max-width: 850px) {
-  .ProjectEntry {
-    flex-direction: column !important;
-    align-items: center !important;
-    justify-content: center !important;
-    text-align: center !important;
-  }
+    .ProjectEntry {
+        flex-direction: column !important;
+        align-items: center !important;
+        justify-content: center !important;
+        text-align: center !important;
+    }
 
-  .ProjectEntry .Icon {
-    display: block !important;
-    align-items: center;
-    justify-content: center;
-    margin-right: 0 !important;
-    margin-bottom: 16px;
-    margin-top: 8px;
-  }
+    .ProjectEntry .Icon {
+        display: block !important;
+        align-items: center;
+        justify-content: center;
+        margin-right: 0 !important;
+        margin-bottom: 16px;
+        margin-top: 8px;
+    }
 
-  .ProjectEntry .Details {
-    align-items: center !important;
-    justify-content: center !important;
-    text-align: center;
-    width: 100%;
-  }
+    .ProjectEntry .Details {
+        align-items: center !important;
+        justify-content: center !important;
+        text-align: center;
+        width: 100%;
+    }
 
-  .ProjectEntry .ProjectTitle {
-    text-align: center;
-    margin-left: auto;
-  }
+    .ProjectEntry .ProjectTitle {
+        text-align: center;
+        margin-left: auto;
+    }
 }
 
 @media screen and (max-width: 720px) {
-  .ProjectList {
-    padding-left: 16px !important;
-    padding-right: 16px !important;
-  }
+    .ProjectList {
+        padding-left: 16px !important;
+        padding-right: 16px !important;
+    }
 }
